    - Scrolltest compiles correctly.
  
  - New Features:
    - Calendar test added.
    - MultiLineTextBox test added.
    - TextBox test added.
    - Added an overload to GraphicsPort to print a length of a string in a
      specific colour.
    - Restructured directories into traditional library layout.
    - Upgraded main project to VC++ 2008.
    - Added libwoopsi.a to SVN.


  V0.39 (20091024)
  
  - Fixes:
    - Removed framebuffer-hitting code from DimmedScreen gadget and replaced
      with call to GraphicsPort::dim().
    - ListBox removes itself from its ListData object when deleted.
    - Keyboard example shows cursor.
    - Moved DimmedScreen into woopsi folder as an official gadget.
    - CycleButton::getPreferredDimensions() populates rect with correct values.
    - Const fixed Gadget::getRefcon().
    - Gadget::disable() and Gadget::enable() redraw the gadget by default.
    - Fixed clipRectToHierarchy() bug introduced in switch to non-recursive
      function in last release.
    - RadioButtonGroup redraws when resized.
    - RadioButtonGroup returns correct dimensions from getPreferredDimensions().
    - Updated copyright notice in defines.h.
    - Bitmap::getPixel() works correctly for large bitmaps.
    - Bitmap::drawBitmap() flushes mem correctly for DMA copy.
    - Gadget::show() clears rect cache of sibling gadgets with a lower z-index
      to ensure that they do not draw over the top of the newly-shown gadget.
    - A disabled gadget that overlaps another now intercepts clicks correctly,
      no longer allowing them to fall through to the gadget below.
  
  - New Features:
    - TextBox and MultiLineTextBox cursor moves when d-pad left/right are
      pressed and gadget has focus.
    - Added tests folder:
      - CycleButton test;
      - RadioButtonGroup test.
    - Added BinaryFile class to bonus folder.
    - Added BitmapIO class to bonus folder - load/save BMP files using libfat.
    - Added BitmapLoader example.